feat: 🎸 Create Preference Page for demo SharePreference

--- a/web/index.html
+++ b/web/index.html
@@ -41,8 +41,12 @@
     <script src="flutter.js" defer></script>
 </head>
 <body>
+
+<!--Add this line first-->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<!-- Firebase Configuration -->
+
+<!--Add this line second-->
+<!--Firebase Configuration-->
 <script>
       var firebaseConfig = {
         apiKey: "...",
